# Open-Connect

./: README.md
backend/: .env.example  docker-compose-rust.yml  docker-compose.yml  manage.py  test_api.py
backend/api/: models.py  serializers.py  urls.py  views.py  webhooks.py  wireguard_manager.py
backend/api/migrations/: 0001_initial.py
backend/relay/: Cargo.toml  test_routing.py  test_websocket.py
backend/relay/src/: main.rs
backend/vps_relay/: asgi.py  settings.py  settings_env.py  settings_postgres.py  urls.py  wsgi.py
core/: .env.example  schema.json
daemon/: identity.key  main.py  requirements.txt  test_wayland.py  test_wl_watch.py  trusted_roster.json
daemon/core/: crypto.py  roster.py
daemon/network/: mdns.py  mesh_socket.py
daemon/os_layers/: clipboard_bridge.py
docs/: 00_MASTER_ROADMAP.md.orig  01_ARCHITECTURE.md  02_USER_FLOWS.md  03_PROJECT_STRUCTURE.md  04_TECH_STACK.md  05_DATABASE_SCHEMA.md  06_SECURITY_THREAT_MODEL.md  07_CLIENT_ARCHITECTURE.md  08_SERVICE_PERSISTENCE.md  09_UNIVERSAL_CONTROL.md  10_SPATIAL_AWARENESS.md  11_FILE_SYNC_ORCHESTRATION.md  12_INTELLIGENT_NOTIFICATIONS.md  13_DESKTOP_FIRST_STRATEGY.md  14_ANDROID_ENGINE_STRATEGY.md  15_FCM_VS_WEBSOCKETS.md  16_FLUTTER_UI_ARCHITECTURE.md
ui_flutter/: pubspec.yaml
ui_flutter/android/app/src/main/kotlin/com/example/ui_flutter/engine/: BackgroundMeshService.kt  MeshClient.kt  MeshServer.kt
ui_flutter/lib/: main.dart
ui_flutter/lib/screens/: radar_home_screen.dart
